Still getting used to having commit messages, Fixed most spacing issues, added the ViewMore click animation to show more profiles

--- a/assets/css/LandingPage.css
+++ b/assets/css/LandingPage.css
@@ -27,6 +27,17 @@ font-family: "Karbon";
 
 }
 
+@font-face{
+  font-family: "Proxima-Nova-Semibold";
+  src:
+      local("Proxima-Nova-Semibold")
+      local("Proxima-Nova-Semibold")
+      url("../fonts/Mark Simonson - Proxima Nova Semibold.otf")
+
+  ;
+
+}
+
 body{
 
   background-color: #eaeaea;
@@ -83,12 +94,13 @@ font-family: 'Karbon-semibold';
 .image-bg-fluid-height {
 	background: url('Top-Page.png') no-repeat center center scroll;
   padding: 17px 0;
-    background-size: cover;
+  background-size: cover;
     
 }
 
 .img-center {
 	margin: 0 auto;
+  padding-top: 160px;
 }
 
 
@@ -121,16 +133,18 @@ footer {
 .landingbtn{
 
     padding-top:69px;
+    padding-bottom: 40px;
     vertical-align: middle;
 
 }
 
 .infoDYM{
-    font-size: 20.97px;
+    font-size: 19px;
     margin-bottom: 42px;
-    text-align: justify;
-    word-spacing: -2px;
+    text-align: left;
+    word-spacing: -1px;
     font-family: "Proxima-Nova";
+    color: #797979;
 }
 
 .infoDYMHeader{
@@ -139,6 +153,8 @@ footer {
     max-width:450px;
     padding-top: 1px;
     top:100px;
+    color: #3c3c3c;
+    margin-left: 100px;
 }
 
 
@@ -147,19 +163,17 @@ footer {
     margin: 10px;
 }
 
-div.linebreaks{
-
-  border-top: 1px solid rgba(150,150,150,3.6);
-  border-bottom: 1px solid rgba(150,150,150,3.6);
-  max-width: 850px;
-  margin:0 auto;
-
-
-}
-
 
 /*About Dear Younger Me content*/
 
+.infosection{
+
+padding-bottom:60px;
+color: #5c5c5c;
+font-family: "Proxima-Nova";
+
+
+}
 
 .aboutDYM{
     font-weight: lighter;
@@ -187,11 +201,12 @@ div.linebreaks{
 .tagline{
 
   margin-top: 15px;
+  padding-top: 40px;
+
 
 }
 
 
-/*About DYM Section (Video and description)*/
 
 .simple-video-wrapper {
   box-shadow: 0 5px 15px rgba(0,0,0,0.3);
@@ -230,8 +245,9 @@ video.DYMvideo{
 
 .vidtxtbox{
   position: absolute;
-  left: 126px;  
-  bottom: 110px;
+  left: 232px;  
+  bottom: 3px;
+  font-size:16px;
 
 
 }
@@ -257,24 +273,18 @@ embed-responsive .embed-responsive-item,
   max-height: 393px;
   border: 0;
 }
-#vidlbs {
 
-border-bottom: 1px solid rgba(150,150,150,3.6);
-    max-width: 993px;
-    margin:0 auto;
-
-}
 
 .videocontents{
 
-    margin-top: 64px;
+    margin-top: 115px;
 }
 
 .DYMsocial{
 
 position: absolute;
 left: 0px;
-bottom: -119px;
+bottom: -139px;
 font-size: 19px;
 font-family: "Proxima-Nova";
 
@@ -283,14 +293,15 @@ font-family: "Proxima-Nova";
 .socialtxt{
 
   margin-right: 20px;
+  color: #797979;
 
 }
 
 .fa-facebook-square:before{
 
   content: "/f082";
-  color: #3B5998;
-  /*color: #484574;*/
+ /* color: #3B5998;*/
+  color: #484574;
 }
 .fbook{
 
@@ -298,13 +309,12 @@ font-family: "Proxima-Nova";
   color: #3B5998;
   }
 
-.fa-facebook-square:before{
+.fa-linkedin-square:before{
 
- color: #007bb6;
- /*color: #484574;*/
+ /*color: #007bb6;*/
+ color: #484574;
 }
 
-}
 .lnkdn{
   margin-right: 20px;
   margin-left: 20px;
@@ -313,8 +323,8 @@ font-family: "Proxima-Nova";
 }
 
 .fa-twitter-square:before{
-  color: #4099ff;
-  /*color: #484574;*/
+  /*color: #4099ff;*/
+  color: #484574;
 }
 
 .tweet{
@@ -333,11 +343,32 @@ font-family: "Proxima-Nova";
   }
 
 
+    /*Diveder for g*/
+
+
+
+#griddvdr{
+
+    border-top: 1px solid #9f9f9f;
+    max-width: 1000px;
+    margin:0 auto;
+
+
+}
 /*Container for the Grid*/
 
 #thegrid{
 
   margin-top: 75px;
+
+}
+
+/*Grid Contents*/
+
+.gridcontents{
+
+    padding-top:40px;
+
 
 }
 
@@ -353,23 +384,24 @@ font-family: "Proxima-Nova";
   color:#3c3c3c;
   left:100px;
   bottom:-40px;
-  font-size: 15px;
-  font-weight: bold;
+  font-size: 38px;
+  font-family: "Karbon-semibold";
 }
 /*Container for Profiles*/
+
+
 #procontainer{
  padding:70px;
+ padding-bottom: 0px;
 
 }
 
 #profilebox{
     position: relative;
     height: 322px;
-    border-radius:5px;
     background-color: #eef1f3;
-    font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
-    max-width: 230px
-
+    max-width: 230px;
+    
 }
 
 /*Profile Layout*/
@@ -384,7 +416,7 @@ font-family: "Proxima-Nova";
 
 .profiletext{
 
-  padding: 10px;
+  padding: 20px;
   text-align: left;
 
 
@@ -392,36 +424,30 @@ font-family: "Proxima-Nova";
 
 
 .bioinfo {
-   margin: 0px 10px 0px 0px;
+  margin: 0px 10px 0px 0px;
    color: #444172;
-  font-family: "Proxima-Nova";
+  font-family: "Proxima-Nova-Semibold";
   font-size: 19px;
   margin-right: 10px;
 }
 
 
-.subinfo{
-
-  top: 10px;
-}
-
-
-
 
 .biosubinfo{
-    margin: 0px 10px 0px 0px;
    font-weight: lighter;
    font-family: "Proxima-Nova";
-   font-size: 15px;
+   font-size: 14.9px;
+   margin-bottom: -12px;
+   margin-top: -9px;
 
 }
 
 .titlesubinfo{
 
-    margin: -10px 10px 0px 0px;
+   /* margin: -10px 10px 0px 0px;*/
    font-weight: lighter;
    font-family: "Proxima-Nova";
-   font-size: 15px;
+   font-size: 14.9px;
    margin-right: 10px;
 
 }
@@ -447,6 +473,34 @@ font-family: "Proxima-Nova";
 
 }
 
+.viewbtn{
+
+  
+  padding-top: 26px;
+}
+
+.btn-default {
+  color: #fff;
+  background-color: #3b3b4c;
+  border-color: #ccc;
+  width: 130px;
+  height: 34px;
+  border-radius: 5px;
+  font-family: "Proxima-Nova-Semibold";
+  font-size:13.84px;
+}
+
+
+.btn-default:hover,
+.btn-default:focus,
+.btn-default.focus,
+.btn-default:active,
+.btn-default.active,
+.open > .dropdown-toggle.btn-default {
+  color: #fff;
+  background-color: #24242e;
+  border-color: #3b3b4c;
+}
 
 
 }
@@ -466,24 +520,22 @@ video {
 
 
 
+.gridghost{
+
+  display: none;
+}
 
 
 
 
 
+/*Ryu*/
 
-
-
-
-
-
-
-
-
-
-
-
-
+.stance{
+  
+  background-image: url("http://i.imgur.com/Rfj0a80.png");
+}
+  
 
 
 
